--- a/sdk/transmission/trans_channel/udp/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/BUILD.gn
@@ -73,10 +73,7 @@ if (defined(ohos_lite)) {
         "//third_party/bounds_checking_function/include",
         "$dsoftbus_root_path/core/connection/interface",
       ]
-      cflags = [
-        "-Wall",
-        "-fPIC",
-      ]
+      cflags = [ "-fPIC" ]
       sources = common_src
       public_configs = [ ":trans_udp_channel_sdk_interface" ]
 
@@ -126,6 +123,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/utils:softbus_utils",
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
+        "stream/adaptor:dsoftbus_trans_dstream",
         "//utils/native/base:utilsecurec_shared",
       ]
       if (enable_trans_udp_file == true) {
