--- a/sdk/transmission/trans_channel/udp/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/BUILD.gn
@@ -68,10 +68,9 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/sdk/transmission/session/include",
         "stream/include",
         "file/include",
-        "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
-        "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
         "//third_party/bounds_checking_function/include",
         "$dsoftbus_root_path/core/connection/interface",
+        "$dsoftbus_root_path/core/transmission/common/include",
       ]
       cflags = [
         "-Wall",
@@ -93,10 +92,26 @@ if (defined(ohos_lite)) {
             "file/src/client_trans_file_listener.c",
             "file/src/file_adapter.c",
           ]
-          deps += [
-            "$dsoftbus_root_path/components/nstackx_enhanced:nstackx",
-            "$dsoftbus_root_path/core/connection/common:conn_common",
-          ]
+          deps += [ "$dsoftbus_root_path/core/connection/common:conn_common" ]
+          native_source_path = rebase_path("$dsoftbus_root_path")
+          dep_file = "components/nstackx_enhanced/nstackx_core/dfile/BUILD.gn"
+          enhanced = exec_script(
+                  "$dsoftbus_root_path/run_shell_cmd.py",
+                  [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ],
+                  "value")
+          if (enhanced) {
+            include_dirs += [
+              "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
+              "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
+            ]
+            deps += [ "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile:nstackx_dfile" ]
+          } else {
+            include_dirs += [
+              "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile/interface",
+              "$dsoftbus_root_path/components/nstackx/nstackx_util/interface",
+            ]
+            deps += [ "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile:nstackx_dfile.open" ]
+          }
         } else {
           sources += [ "file/src/client_trans_file_virtual.c" ]
         }
@@ -114,9 +129,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/trans_channel/udp/stream/include",
       "$softbus_adapter_common/include",
       "file/include",
-      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
-      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
       "$dsoftbus_root_path/core/connection/interface",
+      "$dsoftbus_root_path/core/transmission/common/include",
     ]
     sources = common_src
     public_configs = [ ":trans_udp_channel_sdk_interface" ]
@@ -134,10 +148,26 @@ if (defined(ohos_lite)) {
           "file/src/client_trans_file_listener.c",
           "file/src/file_adapter.c",
         ]
-        deps += [
-          "$dsoftbus_root_path/components/nstackx_enhanced:nstackx",
-          "$dsoftbus_root_path/core/connection/common:conn_common",
-        ]
+        deps += [ "$dsoftbus_root_path/core/connection/common:conn_common" ]
+        native_source_path = rebase_path("$dsoftbus_root_path")
+        dep_file = "components/nstackx_enhanced/nstackx_core/dfile/BUILD.gn"
+        enhanced = exec_script(
+                "$dsoftbus_root_path/run_shell_cmd.py",
+                [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ],
+                "value")
+        if (enhanced) {
+          include_dirs += [
+            "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
+            "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
+          ]
+          deps += [ "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile:nstackx_dfile" ]
+        } else {
+          include_dirs += [
+            "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile/interface",
+            "$dsoftbus_root_path/components/nstackx/nstackx_util/interface",
+          ]
+          deps += [ "$dsoftbus_root_path/components/nstackx/nstackx_core/dfile:nstackx_dfile.open" ]
+        }
       } else {
         sources += [ "file/src/client_trans_file_virtual.c" ]
       }
