--- a/sdk/discovery/service/BUILD.gn
+++ b/sdk/discovery/service/BUILD.gn
@@ -65,7 +65,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_disc_service_sdk") {
+  ohos_source_set("dsoftbus_disc_service_sdk") {
     include_dirs = [
       "include",
       "$dsoftbus_root_path/core/common/include",
