--- a/sdk/transmission/trans_channel/auth/BUILD.gn
+++ b/sdk/transmission/trans_channel/auth/BUILD.gn
@@ -60,7 +60,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_trans_auth_channel_sdk") {
+  ohos_source_set("dsoftbus_trans_auth_channel_sdk") {
     include_dirs = [
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$dsoftbus_root_path/interfaces/kits/common",
