--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -81,7 +81,7 @@ if (defined(ohos_lite)) {
     ]
   }
 
-  ohos_shared_library("softbus_adapter") {
+  ohos_source_set("softbus_adapter") {
     include_dirs = [
       "//third_party/mbedtls/include",
       "//utils/native/base/include",
