--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -88,6 +88,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common:dsoftbus_utils",
         "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
         "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
+        "$dsoftbus_root_path/core/connection:conn_manager",
         "$hilog_lite_deps_path",
         "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
@@ -101,7 +102,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_bus_center_server") {
+  ohos_source_set("dsoftbus_bus_center_server") {
     sources = [
       "ipc/standard_system/src/bus_center_client_proxy.cpp",
       "ipc/standard_system/src/bus_center_client_proxy_standard.cpp",
@@ -133,15 +134,12 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/authentication/interface",
       "$dsoftbus_root_path/core/common/include",
-      "$dsoftbus_root_path/core/common/message_handler/include",
       "$dsoftbus_root_path/core/transmission/interface",
       "$dsoftbus_root_path/core/transmission/common/include",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
       "$dsoftbus_root_path/interfaces/kits/discovery",
       "$dsoftbus_root_path/core/discovery/interface",
-      "$dsoftbus_root_path/core/frame/standard/client/include",
-      "$dsoftbus_root_path/core/frame/standard/softbusdata/include",
-      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$dsoftbus_root_path/sdk/frame/standard/include",
       "$softbus_adapter_config/spec_config",
       "//utils/system/safwk/native/include",
       "lnn/net_buscenter/include",
@@ -154,9 +152,10 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/common:dsoftbus_utils",
       "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
-      "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
+      "$dsoftbus_root_path/core/frame/standard/client_manager:client_manager",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
+      "$dsoftbus_root_path/core/connection:conn_manager",
       "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
       "lnn/net_ledger:dsoftbus_bus_center_ledger",
       "monitor:dsoftbus_bus_center_monitor",
