--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -19,6 +19,7 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_root_path/core/common/include",
       "$softbus_adapter_common/include",
+      "$hilog_lite_include_path",
     ]
   }
 
@@ -69,7 +70,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_utils") {
+  ohos_source_set("dsoftbus_utils") {
     include_dirs = [
       "$dsoftbus_root_path/core/common/include",
       "$softbus_adapter_common/include",
@@ -88,6 +89,8 @@ if (defined(ohos_lite)) {
     public_deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "//utils/native/base:utilsecurec_shared",
+      "//third_party/cJSON:cjson_static",
+      "//utils/native/base:utils",
     ]
     if (is_standard_system) {
       external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
