--- a/core/transmission/BUILD.gn
+++ b/core/transmission/BUILD.gn
@@ -112,7 +112,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_trans_session") {
+  ohos_source_set("dsoftbus_trans_session") {
     include_dirs = [
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/transmission/common/include",
@@ -122,10 +122,14 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$dsoftbus_root_path/core/connection/interface",
       "$dsoftbus_root_path/core/transmission/ipc/include",
+      "$dsoftbus_root_path/core/transmission/ipc/standard/include",
       "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
       "$dsoftbus_root_path/core/bus_center/utils/include",
       "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
       "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+      "$dsoftbus_root_path/sdk/frame/standard/include",
+      "$dsoftbus_root_path/interfaces/kits/discovery",
+      "$dsoftbus_root_path/interfaces/kits/common",
       "//third_party/cJSON",
     ]
     sources = [
@@ -158,7 +162,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
       "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
-      "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
+      "$dsoftbus_root_path/core/frame/standard/client_manager:client_manager",
       "//utils/native/base:utilsecurec_shared",
       "//utils/native/base:utils",
     ]
