--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -11,13 +11,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//build/lite/config/component/lite_component.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-if (is_build_shared_sdk == true) {
-  build_type = "shared_library"
+if (defined(ohos_lite)) {
+  import("//build/lite/config/component/lite_component.gni")
+  if (is_build_shared_sdk == true) {
+    build_type = "shared_library"
+  } else {
+    build_type = "static_library"
+  }
 } else {
-  build_type = "static_library"
+  import("//build/ohos.gni")
+  if (is_build_shared_sdk == true) {
+    build_type = "ohos_shared_library"
+  } else {
+    build_type = "ohos_static_library"
+  }
 }
 
 config("dsoftbus_sdk_interface") {
@@ -26,10 +35,11 @@ config("dsoftbus_sdk_interface") {
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/interfaces/kits/transport",
+    "$dsoftbus_root_path/sdk/transmission/session/cpp/include",
   ]
 }
 
-target(build_type, "dsoftbus_sdk") {
+target(build_type, "softbus_client") {
   if (is_build_shared_sdk == false) {
     complete_static_lib = true
   }
@@ -39,8 +49,9 @@ target(build_type, "dsoftbus_sdk") {
     "transmission/session:dsoftbus_trans_session_sdk",
   ]
   public_configs = [ ":dsoftbus_sdk_interface" ]
-}
-
-lite_component("softbus_client") {
-  features = [ ":dsoftbus_sdk" ]
+  if (defined(ohos_lite)) {
+  } else {
+    part_name = "dsoftbus_standard"
+    subsystem_name = "communication"
+  }
 }
