--- a/sdk/bus_center/BUILD.gn
+++ b/sdk/bus_center/BUILD.gn
@@ -62,18 +62,17 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_bus_center_manager_sdk") {
+  ohos_source_set("dsoftbus_bus_center_manager_sdk") {
     include_dirs = [
       "ipc/include",
       "ipc/standard/include",
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/bus_center/interface",
-      "$dsoftbus_root_path/core/frame/standard/server/include",
+      "$dsoftbus_root_path/core/frame/standard/init/include",
       "$dsoftbus_root_path/core/transmission/common/include",
       "$dsoftbus_root_path/interfaces/kits/discovery",
       "$dsoftbus_root_path/interfaces/kits/transport",
-      "$dsoftbus_root_path/core/common/softbus_property/include",
       "$softbus_adapter_config/spec_config",
       "//utils/system/safwk/native/include",
     ]
