--- a/sdk/frame/BUILD.gn
+++ b/sdk/frame/BUILD.gn
@@ -102,7 +102,18 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("softbus_client_frame") {
+  config("softbus_client_interface") {
+    include_dirs = [
+      "$dsoftbus_root_path/interfaces/kits/bus_center",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/interfaces/kits",
+      "$dsoftbus_root_path/interfaces/kits/discovery",
+      "$dsoftbus_root_path/interfaces/kits/transport",
+      "$dsoftbus_root_path/sdk/transmission/session/cpp/include",
+    ]
+  }
+
+  ohos_source_set("softbus_client_frame") {
     include_dirs = [
       "common/include",
       "standard/include",
@@ -110,26 +121,29 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_common/include",
       "//utils/system/safwk/native/include",
       "$dsoftbus_root_path/sdk/discovery/manager/include",
-      "$dsoftbus_root_path/core/frame/standard/server/include",
+      "$dsoftbus_root_path/core/frame/standard/init/include",
+      "$dsoftbus_root_path/core/transmission/common/include",
       "$dsoftbus_root_path/sdk/transmission/session/include",
       "$dsoftbus_root_path/sdk/bus_center/manager/include",
-      "$dsoftbus_root_path/core/frame/standard/client/include",
-      "$dsoftbus_root_path/core/transmission/common/include",
       "$softbus_adapter_config/spec_config",
       "$dsoftbus_root_path/core/common/softbus_property/include",
     ]
 
     sources = [
-      "$dsoftbus_root_path/core/frame/standard/client/src/softbus_client_stub.cpp",
       "common/src/softbus_client_event_manager.c",
       "common/src/softbus_client_frame_manager.c",
       "standard/src/softbus_client_death_recipient.cpp",
       "standard/src/softbus_server_proxy_frame.cpp",
       "standard/src/softbus_server_proxy_standard.cpp",
+      "standard/src/if_softbus_client.cpp",
+      "standard/src/softbus_client_stub.cpp",
     ]
 
     defines = [ "SOFTBUS_WATCH" ]
 
+    public_configs = [
+      ":softbus_client_interface"
+    ]
     if (is_standard_system) {
       external_deps = [
         "hiviewdfx_hilog_native:libhilog",
