--- a/sdk/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/sdk/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -74,7 +74,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
 
-  ohos_shared_library("dsoftbus_trans_direct_channel_sdk") {
+  ohos_source_set("dsoftbus_trans_direct_channel_sdk") {
     include_dirs = [
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$softbus_adapter_common/include",
